# hvahoot

./: .gitignore  README.md
backend/: Cargo.toml
backend/.sqlx/: query-0372a08e7c6dc1086a4ee0f8f346238c1389c3275daaf97bdc99735d9d009510.json  query-26da811d40aa07d7aea5088b0498176c458e2f391c68fa0393e945e83b877387.json  query-2e606512755846a5d9841a328b8c8efce440c80347124d138e9f78c4bc6b367f.json  query-634a7a1f3b4c7ebe15ebf6bd648833a69803b526212bc04c27f4b33fd4c393fa.json  query-8770d1050b1cbd273d7bedd64756076acc5ab7f649f67cc5d0ad15fdfd6ea440.json  query-8dbc53b2e04959b97301da339083039b57d231f916fcf9b3d17dda603782c575.json  query-967669d0881fcc3c9187f01bc1e8e14995b8eea9e2c0cf10e121987a733f7402.json  query-b0e39db2fc9e52716768c07332c975ae00e8ed69ffbd9d62dc13a24ad22b7655.json  query-b28fbdef4c55d366a715db7fa83ed7a8d99ec1d686f4f487c95260aa3f77d4dd.json  query-b8920df3391188fc0b2657a1b3b48134b40a794f3875fc79085336fa61ba2132.json  query-df83c7ae6757a490937082d1de6336ffa1f13bff5bb1bdf6b08d6ade6dfad6ac.json
backend/migrations/: 20250318103635_client.up.sql  20250318103708_questions.down.sql  20250318103708_questions.up.sql  20250318103752_tokens.up.sql  20250319090401_unique_username.down.sql  20250319090401_unique_username.up.sql  20250319100351_uuid_question.down.sql  20250319100351_uuid_question.up.sql  20250319104302_null_question.down.sql  20250319104302_null_question.up.sql  20250320103829_non_null_answer.down.sql  20250320103829_non_null_answer.up.sql  20250320131735_uuid_size_hvahoots.down.sql  20250320131735_uuid_size_hvahoots.up.sql  (+2 more)
backend/src/: http.rs  hvahoot.rs  (+4 more)
(+18 files in other folders)
