[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
rocket = { version = "0.5.1", features = ["json"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres", "macros"] }
tokio = { version = "1.44.1", features = ["macros"] }
uuid = { version = "1.16.0", features = ["v4"] }
